--- a/short-response/q1.md
+++ b/short-response/q1.md
@@ -8,4 +8,6 @@ Context should be used as an alternative over prop drilling when passing props t
 
 # Feedback
 
-X/3 points
+This is correct!
+
+3/3 points
