--- a/short-response/q3.md
+++ b/short-response/q3.md
@@ -41,5 +41,6 @@ const App = () => {
 
 
 # Feedback
+Where can we use context in the example above? Right now we only have it imported however we are not using it anywhere.
 
-X/3 points
+1/3 points
