--- a/short-response/q4.md
+++ b/short-response/q4.md
@@ -32,4 +32,6 @@ export default InstagramContextProvider;
 
 # Feedback
 
-X/3 points
+Not entirely. When we are using the Global context provider what component is the child? 
+
+1/3 points
