--- a/short-response/q2.md
+++ b/short-response/q2.md
@@ -14,4 +14,5 @@ Lastly, with useContext you can copy the Context object and its properties into 
 
 # Feedback
 
-X/3 points
+For the last one you do not want to copy the context object but rather get the values. 
+2/3 points
