--- a/short-response/q2.md
+++ b/short-response/q2.md
@@ -10,6 +10,10 @@ Next you need to render the context provider. Using the returned context compone
 
 Lastly, with useContext you can copy the Context object and its properties into the component that actually needs the data.
 
+***********REVISED***********
+
+Lastly, with useContext you want to get the values of Context object and its properties into the component that actually needs the data.
+
 
 
 # Feedback
