--- a/short-response/q4.md
+++ b/short-response/q4.md
@@ -29,7 +29,9 @@ export default InstagramContextProvider;
 
  `InstagramContextProvider` will be wrapped around any component that is passed into the component as a prop.
 
+ ***********REVISED***********
 
+When we use global context the child componets are wrapped within the context provider
 # Feedback
 
 Not entirely. When we are using the Global context provider what component is the child? 
