--- a/short-response/q4.md
+++ b/short-response/q4.md
@@ -31,7 +31,11 @@ export default InstagramContextProvider;
 
  ***********REVISED***********
 
-When we use global context the child componets are wrapped within the context provider
+-When we use global context the child componets are wrapped within the context provider
+
+-The children in the InstagramContextProvider represent any components that will be wrapped by the provider. 
+
+
 # Feedback
 
 Not entirely. When we are using the Global context provider what component is the child? 
