--- a/short-response/q2.md
+++ b/short-response/q2.md
@@ -18,5 +18,5 @@ Lastly, with useContext you want to get the values of Context object and its pro
 
 # Feedback
 
-For the last one you do not want to copy the context object but rather get the values. 
-2/3 points
+Yes!
+3/3 points
