--- a/short-response/q4.md
+++ b/short-response/q4.md
@@ -38,6 +38,6 @@ export default InstagramContextProvider;
 
 # Feedback
 
-Not entirely. When we are using the Global context provider what component is the child? 
+Child components can be wrapped with the provider however, when we are using the **Global context provider** what component is the child? 
 
 1/3 points
